examples/invalid/41_refutable_pattern_let_variant.lane
module Examples.Invalid.RefutablePatternLetVariant

enum Option[A] {
  none()
  some(A)
}

fn bad(value : Option[Int]) -> Int {
  {
    let some(x) = value
    x
  }
}

let value : Int = bad(Option::none())
